# django-cron

./: pyproject.toml
.github/workflows/: django.yml
demo/demo/: cron.py
django_cron/: admin.py  core.py  helpers.py  models.py  tests.py
django_cron/backends/lock/: base.py  cache.py  database.py  file.py
django_cron/management/commands/: cronloop.py  runcrons.py
django_cron/test/: cron.py  settings.py
